--- a/Dockerfile_php
+++ b/Dockerfile_php
@@ -1,10 +1,10 @@
 # Use the PHP 8.1 Apache base image
 FROM php:8.1-apache
 
-# Set environment variables
-ENV APACHE_DOCUMENT_ROOT=${APACHE_DOCUMENT_ROOT} \
-    APACHE_SERVER_NAME=${APACHE_SERVER_NAME}\
-    COMPOSER_ALLOW_SUPERUSER=${COMPOSER_ALLOW_SUPERUSER} \
+# # Set environment variables
+ENV APACHE_DOCUMENT_ROOT=/app/public \
+    APACHE_SERVER_NAME=localhost\
+    COMPOSER_ALLOW_SUPERUSER=1 \
     APP_URL=${APP_URL} \
     DB_CONNECTION=${DB_CONNECTION} \
     DB_HOST=${DB_HOST} \
